--- a/home.html
+++ b/home.html
@@ -29,8 +29,8 @@
 	</div>
 
 	<div class="container circle">
-			<input type="number" class="diceAmount" placeholder="how many dice?" maxLength="2" size="9" value=""/>
-			<input type="submit" class="roll_button" value="ROLL">
+			<div>how many dice?<input type="number" class="diceAmount" min="1" maxLength="2" size="9" value="1"/></div>
+			<input type="submit" class="roll_button" value="ROLL!">
 			<input type="submit" class="hidden clear_button" value="CLEAR">
 			<span id="score"></span>
 	</div>
