--- a/home.html
+++ b/home.html
@@ -31,8 +31,8 @@
 	<div class="container circle">
 			<div>how many dice?<input type="number" class="diceAmount" min="1" maxLength="2" size="9" value="1"/></div>
 			<input type="submit" class="roll_button" value="ROLL!">
-			<input type="submit" class="hidden clear_button" value="CLEAR">
 			<span id="score"></span>
+			<div class="diceField"></div>
 	</div>
 
 	<footer class="footer">
